// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebView WebViewSourceHtmlでも正常にレンダリングされること 1`] = `
<View
  onError={[Function]}
  onLoadProgress={[Function]}
  onLoadStart={[Function]}
  onScroll={[Function]}
  source={
    {
      "html": "<h1>test</h1>",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
  testID="webview"
/>
`;

exports[`WebView WebViewが正常にrenderできることを確認 1`] = `
<View
  onError={[Function]}
  onLoadProgress={[Function]}
  onLoadStart={[Function]}
  onScroll={[Function]}
  source={
    {
      "uri": "https://localhost/",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
  testID="webview"
/>
`;
